version/0.2/_sources/api/_autosummary/ansys.meshing.prime.rst.txt
ansys.meshing.prime
===================

.. currentmodule:: ansys.meshing.prime







.. autosummary::
   :toctree:
   :caption: Functions


   disable_optimizing_numpy_arrays
   enable_optimizing_numpy_arrays
   is_optimizing_numpy_arrays
   launch_prime
   launch_server_process
   local_model
   numpy_array_optimization_disabled
   numpy_array_optimization_enabled





.. autosummary:: 
   :toctree:
   :caption: Classes


   AddLabelResults
   AddThicknessParams
   AddThicknessResults
   AddToZoneResults
   AdvancedSurferSetup
   AutoMesh
   AutoMeshParams
   AutoMeshResults
   AutoNodeMoveParams
   BoiSizingParams
   BoundaryFittedSpline
   BoundaryFittedSplineParams
   BoundingBox
   CadFaceter
   CadReaderRoute
   CadRefacetingMaxEdgeSizeLimit
   CadRefacetingParams
   CadRefacetingResolution
   CellQualityMeasure
   CellZoneletType
   CheckMeshParams
   CheckMeshResults
   Client
   CollapseParams
   CollapseResults
   CollapseTool
   ComputeTopoVolumesResults
   ComputeVolumesParams
   ComputeVolumesResults
   Connect
   ConnectResults
   ContactPreventionParams
   ControlData
   ControlPointSelection
   CopyZoneletsParams
   CopyZoneletsResults
   CreateCapParams
   CreateCapResults
   CreateIntersectionEdgeLoopsParams
   CreateIntersectionEdgeLoopsResults
   CreateMaterialPointParams
   CreateMaterialPointResults
   CreateVolumeZonesType
   CreateZoneResults
   CurvatureSizingParams
   DeleteFringesAndOverlapsParams
   DeleteFringesAndOverlapsResults
   DeleteResults
   DeleteTool
   DeleteTopoEntitiesParams
   DeleteTopoEntitiesResults
   DeleteUnwettedParams
   DeleteUnwettedResult
   DeleteVolumesParams
   DeleteVolumesResults
   DeleteZoneResults
   EdgeConnectivityResults
   ErrorCode
   ExportBoundaryFittedSplineParams
   ExportFluentCaseParams
   ExportFluentMeshingMeshParams
   ExportMapdlCdbParams
   ExportMapdlCdbResults
   ExtractFeatureParams
   ExtractFeatureResults
   ExtractTopoVolumesParams
   ExtractTopoVolumesResults
   ExtractVolumesParams
   ExtractVolumesResults
   ExtractedFeatureIds
   FaceAndEdgeConnectivityParams
   FaceAndEdgeConnectivityResults
   FaceConnectivityResults
   FaceQualityMeasure
   FeatureExtraction
   FeatureRecoveryParams
   FileIO
   FileReadParams
   FileReadResults
   FileWriteParams
   FileWriteResults
   FillHolesAtPlaneParams
   FillHolesAtPlaneResults
   GlobalSizingParams
   HardSizingParams
   IGAResults
   IGASpline
   ImportCadParams
   ImportCadResults
   ImportFluentCaseParams
   ImportFluentCaseResults
   ImportFluentMeshingMeshParams
   ImportFluentMeshingMeshResults
   ImportMapdlCdbParams
   ImportMapdlCdbResults
   IntersectParams
   IntersectionMask
   JoinParams
   JoinSeparateMethod
   LeakPreventionParams
   LengthUnit
   LocalSurferParams
   LocalSurferResults
   MatchNodesOption
   MaterialPointManager
   MaterialPointType
   MergePartsParams
   MergePartsResults
   MergeVolumesParams
   MergeVolumesResults
   MergeZoneletsParams
   MergeZoneletsResults
   MeshInfo
   MeshMatchParams
   MeshedSizingParams
   Model
   NamePatternParams
   Part
   PartCreationType
   PartSummaryParams
   PartSummaryResults
   PartZonelets
   PrismControl
   PrismControlGrowthParams
   PrismControlOffsetType
   PrismParams
   ProximitySizingParams
   ReadSizeFieldParams
   RefineAtContactsParams
   RefineAtContactsResults
   RefineSplineParams
   RemoveLabelResults
   RemoveZoneResults
   ResolveIntersectionResult
   ResolveIntersectionsParams
   Scaffolder
   ScaffolderMergeResults
   ScaffolderParams
   ScaffolderResults
   ScaffolderSplitResults
   ScopeDefinition
   ScopeEntity
   ScopeEvaluationType
   ScopeExpressionType
   ScopeZoneletParams
   SearchByFoldsParams
   SearchByFoldsResults
   SearchByIntersectionResults
   SearchByQualityParams
   SearchByQualityResults
   SearchBySelfIntersectionParams
   SearchBySpikeParams
   SearchBySpikeResults
   SearchByThinStripParams
   SearchByThinStripResults
   SetContactPreventionsResults
   SetFeatureRecoveriesResults
   SetLeakPreventionsResults
   SetNameResults
   SetScopeResults
   SetSizingResults
   SizeControl
   SizeControlSummaryParams
   SizeControlSummaryResult
   SizeField
   SizeFieldFileReadResults
   SizeFieldType
   SizingType
   SmoothDihedralFaceNodesParams
   SmoothDihedralFaceNodesResults
   SoftSizingParams
   SolverType
   SplineRefinementType
   SplitParams
   StitchParams
   StitchType
   SurfaceDiagnosticSummaryParams
   SurfaceDiagnosticSummaryResults
   SurfaceFeatureType
   SurfaceQualityResult
   SurfaceQualitySummaryParams
   SurfaceQualitySummaryResults
   SurfaceSearch
   SurfaceUtilities
   Surfer
   SurferParams
   SurferResults
   TetParams
   TopoFillHoleParams
   TopoFillHoleResult
   TopoUtilities
   Transform
   TransformParams
   TransformResults
   VolumeControl
   VolumeControlParams
   VolumeFillType
   VolumeMeshTool
   VolumeMeshToolResults
   VolumeNamingType
   VolumeQualityResultsPart
   VolumeQualitySummaryParams
   VolumeQualitySummaryResults
   VolumeSearch
   VolumetricScaffolderParams
   VolumetricSizeFieldComputeParams
   VolumetricSizeFieldComputeResults
   WarningCode
   WrapParams
   WrapRegion
   WrapResult
   Wrapper
   WrapperCloseGapsParams
   WrapperCloseGapsResult
   WrapperControl
   WrapperImproveQualityParams
   WrapperImproveResult
   WriteSizeFieldParams
   ZoneType





.. autosummary:: 
   :toctree:
   :caption: Classes


   PrimeRuntimeError
   PrimeRuntimeWarning





